# meal-planning-app

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .semgrepignore  .trivy.yaml  CLAUDE.md  README.md  SECURITY.md  SHOPPING_LISTS_API_INTEGRATION.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
apps/api/: .bandit  .env.example  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_recipe_ratings_favorites.py  003_add_cached_recipes.py  004_add_meal_types.py
apps/api/scripts/: collect_korean_recipes.py  daily_spoonacular_fetch.sh
apps/api/src/: main.py
apps/api/src/adapters/: foodsafetykorea.py  mafra.py  openai.py  spoonacular.py  themealdb.py
apps/api/src/core/: __init__.py  config.py  database.py  exceptions.py  redis.py  security.py
apps/api/src/data/: korean_recipes_seed.json
apps/api/src/middleware/: error_handler.py
apps/api/src/models/: __init__.py  base.py  cached_recipe.py  ingredient.py  instruction.py  meal_plan.py  meal_slot.py  recipe.py  recipe_favorite.py  recipe_rating.py  shopping_item.py  shopping_list.py  user.py
apps/api/src/repositories/: __init__.py  base.py  cached_recipe.py  meal_plan.py  recipe.py  recipe_interaction.py  shopping_list.py  user.py
apps/api/src/schemas/: __init__.py  auth.py  common.py  ingredient.py  instruction.py  meal_plan.py  recipe.py  shopping_list.py  (+2 more)
apps/api/tests/: conftest.py
(+156 files in other folders)
